Test hosting firebase

--- a/src/app/pages/user/home/home.component.html
+++ b/src/app/pages/user/home/home.component.html
@@ -6,15 +6,20 @@
   <div
     class="role-button-wrapper d-sm-flex justify-content-center align-items-center gap-4 d-block"
   >
-    <button (click)="selectRole('tester')"
+    <button (click)="selectRole('Tester')"
       class="fs-4 btn btn-lg btn-warning border-dark py-3 d-flex align-items-center justify-content-center"
     >
       Tester
     </button>
-    <button (click)="selectRole('developer')"
+    <button (click)="selectRole('Developer')"
       class="fs-4 btn btn-lg btn-warning border-dark py-3 d-flex align-items-center justify-content-center mt-4 mt-sm-0"
     >
       Developer
     </button>
+
   </div>
+<button (click)="test('0001')">TestFunction</button>
+
 </div>
+
+
