Quiz service for submit and firestore saveable

--- a/src/app/pages/user/quiz/quiz.component.html
+++ b/src/app/pages/user/quiz/quiz.component.html
@@ -13,6 +13,6 @@
   </textarea>
   </div>
   <div class="submit mt-5 d-flex justify-content-end" *ngIf="isLast">
-    <button class="btn btn-success py-4 w-25">Submit Answer</button>
+    <button class="btn btn-success py-4 w-25" (click)="submitAnswer()">Submit Answer</button>
   </div>
 </div>
