--- a/src/app/pages/user/home/home.component.css
+++ b/src/app/pages/user/home/home.component.css
@@ -6,3 +6,17 @@
 .role-button-wrapper button{
     width: 13rem;
 }
+
+.register-form{
+    width: 80%;
+}
+
+input[type="radio"]{
+    scale: 1.7;
+}
+
+@media only screen and (min-width: 992px) {
+    .register-form{
+        width: 30%;
+    }
+}
