--- a/src/app/pages/user/home/home.component.html
+++ b/src/app/pages/user/home/home.component.html
@@ -1,25 +1,67 @@
-<div
-  class="homepage d-flex align-items-center justify-content-center flex-column gap-4"
->
+<div class="homepage d-flex align-items-center justify-content-center flex-column gap-4">
   <div class="main-text fw-bold fs-1">Quiz Exercise!</div>
   <div class="sub-text fs-4">Who you are?</div>
-  <div
-    class="role-button-wrapper d-sm-flex justify-content-center align-items-center gap-4 d-block"
-  >
-    <button (click)="selectRole('Tester')"
-      class="fs-4 btn btn-lg btn-warning border-dark py-3 d-flex align-items-center justify-content-center"
-    >
-      Tester
-    </button>
-    <button (click)="selectRole('Developer')"
-      class="fs-4 btn btn-lg btn-warning border-dark py-3 d-flex align-items-center justify-content-center mt-4 mt-sm-0"
-    >
-      Developer
+
+  <form [formGroup]="userForm" (ngSubmit)="quizRegisterSubmit()" class="mt-3 register-form">
+    <div class="mb-3">
+      <label for="name" class="form-label fw-bold">Name</label>
+      <input type="text" id="name" class="form-control form-control-lg" formControlName="name" />
+      <div *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched" class="text-danger">
+        Name is required.
+      </div>
+    </div>
+    <div class="mb-3">
+      <label for="email" class="form-label fw-bold">Email</label>
+      <input type="email" id="email" class="form-control form-control-lg" formControlName="email" />
+      <div *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched" class="text-danger">
+        Please check your email again.
+      </div>
+    </div>
+    <div class="mb-3">
+      <label for="phone" class="form-label fw-bold">Phone number</label>
+      <input type="tel" id="phone" class="form-control form-control-lg" formControlName="phone" maxLength="10" />
+      <div *ngIf="userForm.get('phone')?.invalid && userForm.get('phone')?.touched" class="text-danger">
+        Please check your phone number again.
+      </div>
+    </div>
+    <div class="mb-5">
+      <label class="form-label fw-bold">Select Your Role</label>
+      <div class="row mt-2">
+        <div class="col-6">
+          <div class="form-check d-flex justify-content-center gap-3">
+            <input class="form-check-input" type="radio" formControlName="role" id="tester" value="Tester" />
+            <label class="form-check-label" for="tester">Tester</label>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="form-check d-flex justify-content-center gap-3">
+            <input class="form-check-input" type="radio" formControlName="role" id="developer" value="Developer" />
+            <label class="form-check-label" for="developer">Developer</label>
+          </div>
+        </div>
+      </div>
+      <div *ngIf="userForm.get('role')?.invalid && userForm.get('role')?.touched" class="text-danger">
+        Please select the role.
+      </div>
+    </div>
+
+    <button type="submit" [disabled]="userForm.invalid"
+      class="fs-4 btn btn-lg border-dark py-3 d-flex align-items-center justify-content-center w-100 {{ userForm.invalid ? 'btn-secondary ' : 'btn-warning' }}">
+      Let's get started!
     </button>
 
-  </div>
-<button (click)="test('0001')">TestFunction</button>
-
+    <!-- <div class="mt-5 text-center fw-bold">
+      Fill above data and choose your position.
+    </div>
+    <div class="role-button-wrapper d-sm-flex justify-content-center align-items-center gap-4 d-block mt-4">
+      <button type="submit" [disabled]="userForm.invalid"
+        class="fs-4 btn btn-lg border-dark py-3 d-flex align-items-center justify-content-center w-100 {{ userForm.invalid ? 'btn-secondary ' : 'btn-warning' }}">
+        Tester
+      </button>
+      <button type="submit" [disabled]="userForm.invalid"
+        class="fs-4 btn btn-lg border-dark py-3 d-flex align-items-center justify-content-center mt-4 mt-sm-0 w-100 {{ userForm.invalid ? 'btn-secondary' : 'btn-warning' }}">
+        Developer
+      </button>
+    </div> -->
+  </form>
 </div>
-
-
