--- a/src/app/pages/user/home/home.component.html
+++ b/src/app/pages/user/home/home.component.html
@@ -17,51 +17,19 @@
         Please check your email again.
       </div>
     </div>
-    <div class="mb-3">
+    <div class="mb-5">
       <label for="phone" class="form-label fw-bold">Phone number</label>
       <input type="tel" id="phone" class="form-control form-control-lg" formControlName="phone" maxLength="10" />
       <div *ngIf="userForm.get('phone')?.invalid && userForm.get('phone')?.touched" class="text-danger">
         Please check your phone number again.
       </div>
     </div>
-    <div class="mb-5">
-      <label class="form-label fw-bold">Select Your Role</label>
-      <div class="row mt-2">
-        <div class="col-6">
-          <div class="form-check d-flex justify-content-center gap-3">
-            <input class="form-check-input" type="radio" formControlName="role" id="tester" value="Tester" />
-            <label class="form-check-label" for="tester">Tester</label>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="form-check d-flex justify-content-center gap-3">
-            <input class="form-check-input" type="radio" formControlName="role" id="developer" value="Developer" />
-            <label class="form-check-label" for="developer">Developer</label>
-          </div>
-        </div>
-      </div>
-      <div *ngIf="userForm.get('role')?.invalid && userForm.get('role')?.touched" class="text-danger">
-        Please select the role.
-      </div>
-    </div>
-
     <button type="submit" [disabled]="userForm.invalid"
       class="fs-4 btn btn-lg border-dark py-3 d-flex align-items-center justify-content-center w-100 {{ userForm.invalid ? 'btn-secondary ' : 'btn-warning' }}">
       Let's get started!
     </button>
-
-    <!-- <div class="mt-5 text-center fw-bold">
-      Fill above data and choose your position.
-    </div>
-    <div class="role-button-wrapper d-sm-flex justify-content-center align-items-center gap-4 d-block mt-4">
-      <button type="submit" [disabled]="userForm.invalid"
-        class="fs-4 btn btn-lg border-dark py-3 d-flex align-items-center justify-content-center w-100 {{ userForm.invalid ? 'btn-secondary ' : 'btn-warning' }}">
-        Tester
-      </button>
-      <button type="submit" [disabled]="userForm.invalid"
-        class="fs-4 btn btn-lg border-dark py-3 d-flex align-items-center justify-content-center mt-4 mt-sm-0 w-100 {{ userForm.invalid ? 'btn-secondary' : 'btn-warning' }}">
-        Developer
-      </button>
-    </div> -->
+    <a routerLink="" class="fs-4 btn btn-primary btn-lg border-dark py-3 d-flex align-items-center justify-content-center w-100 mt-3 opacity-100">
+      Check for users answer
+    </a>
   </form>
 </div>
