--- a/src/app/pages/user/layout/layout.component.html
+++ b/src/app/pages/user/layout/layout.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-dark bg bg-dark navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Quiz for <span class="fw-bold text-warning" *ngIf="role">{{ role }}</span></a>
+    <a class="navbar-brand" href="#">Quiz</a>
     <div class="d-flex gap-2">
       <!-- <button class="btn btn-success me-2" *ngIf="isLast" (click)="submitAnswer()">Submit</button> -->
-      <button class="btn btn-warning text-black" [disabled]="isPrevable" (click)="prevQuestion()">Back</button>
-      <button class="text-white btn btn-primary" [disabled]="isNextable" (click)="nextQuestion()">Next</button>
+      <button class="btn btn-warning text-black" *ngIf="!quizSubmitted" [disabled]="isPrevable" (click)="prevQuestion()">Back</button>
+      <button class="text-white btn btn-primary" *ngIf="!quizSubmitted" [disabled]="isNextable" (click)="nextQuestion()">Next</button>
+      <button class="btn btn-primary" *ngIf="quizSubmitted" (click)="redo()">Redo quiz</button>
     </div>
   </div>
 </nav>
@@ -14,6 +15,9 @@
    [currentPage]="currentPage"
    [isLast]="isLast"
    [answer]="answers[currentPage - 1]"
-   (answerChange)="saveAnswer($event)" 
+   [answers]="answers"
+   [quizSubmitted]="quizSubmitted"
+   (quizSubmittedChange)="onQuizSubmitted()"
+   (answerChange)="saveAnswer($event)"
    ></app-quiz>
 </main>
