Admin auth check submit, login and checklogin

--- a/src/app/pages/user/home/home.component.html
+++ b/src/app/pages/user/home/home.component.html
@@ -28,7 +28,7 @@
       class="fs-4 btn btn-lg border-dark py-3 d-flex align-items-center justify-content-center w-100 {{ userForm.invalid ? 'btn-secondary ' : 'btn-warning' }}">
       Let's get started!
     </button>
-    <a routerLink="" class="fs-4 btn btn-primary btn-lg border-dark py-3 d-flex align-items-center justify-content-center w-100 mt-3 opacity-100">
+    <a routerLink="/login" class="fs-4 btn btn-primary btn-lg border-dark py-3 d-flex align-items-center justify-content-center w-100 mt-3 opacity-100">
       Check for users answer
     </a>
   </form>
